# Provider-Intelligence-Pipeline

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: adapters.py  components.py  streamlit_app.py  style.css
config/: app_config.yaml  field_weights.yaml  llm_config.yaml  source_reliability.yaml  thresholds.yaml
data/raw/practice_websites/: messy_demo_page.html  sample_practice_page.html
data/reference/: nucc_taxonomy_sample.csv
data/sample/: current_directory.csv  external_cms_clinicians.csv  external_nppes_snapshot.csv
docs/: PROJECT.md
docs/sample_outputs/: audit_log_sample.csv  auto_update_evaluation_debug_sample.csv  auto_updates_sample.csv  cost_estimate_sample.json  evaluation_metrics_sample.json  human_review_queue_sample.csv  recommendations_detailed_sample.json  recommendations_sample.json
src/provider_intelligence/: __init__.py  audit.py  cli.py  config.py  cost_model.py  data_generation.py  decision_engine.py  evaluation.py  export.py  ingest.py  llm.py  llm_diagnostics.py  llm_enrichment.py  match.py  normalize.py  npi.py  pipeline.py  schemas.py  scoring.py  taxonomy.py  website_parser.py
tests/: conftest.py  test_competition_export.py  test_dashboard_data_adapters.py  test_decision_engine.py  test_evaluation_metrics.py  test_llm.py  test_llm_diagnostics.py  test_llm_enrichment.py  test_normalize.py  test_npi.py  test_pipeline_smoke.py  test_scoring.py
