[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "provider-intelligence-pipeline"
version = "0.1.0"
description = "Offline-first provider directory validation with adaptive LLM assistance"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Provider Intelligence Team" }]
dependencies = [
    "pandas>=2.0", "numpy>=1.24", "pydantic>=2.0", "pydantic-settings>=2.0",
    "rapidfuzz>=3.0", "phonenumbers>=8.13", "usaddress>=0.5", "python-dateutil>=2.8",
    "pyyaml>=6.0", "typer>=0.9", "rich>=13.0", "streamlit>=1.28", "plotly>=5.18",
    "requests>=2.31", "beautifulsoup4>=4.12", "jinja2>=3.1", "openai>=1.0",
    "pytest>=7.4", "ruff>=0.1",
]

[project.optional-dependencies]
dev = []
large = ["duckdb>=0.9"]

[project.scripts]
provider-intelligence = "provider_intelligence.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
